finish async player joining